added many gamerules train improvements lots of other things